# OpenGLCourseJP

./: .clang-format  .gitignore  .gitmodules  .travis.yml  404.html  CMakeLists.txt  Pipfile  README.md  environment.yaml  feed.xml  index.html  logo.ai  pyproject.toml  requirements.txt  robots.txt  setup.cfg  sitemap.xml
.github/workflows/: jekyll.yaml  macos.yaml  ubuntu.yaml  windows.yaml
advanced/: CMakeLists.txt
advanced/bump_mapping/: main.cpp
advanced/bump_mapping/shaders/: render.frag  render.vert
advanced/cart_poll/: README.md  agent.py  env.py  environment.yaml  main.py  opengl.py  setup.cfg
advanced/cart_poll/shaders/: render.frag  render.vert
advanced/cook_torrance/: main.cpp
advanced/cook_torrance/shaders/: render.frag
advanced/cube_mapping/: common.h.in  main.cpp
advanced/cube_mapping/shaders/: background.frag
advanced/framebuffer/: main.cpp
advanced/framebuffer/shaders/: render.frag
advanced/gooch_shader/: main.cpp
advanced/gooch_shader/shaders/: render.frag  render.vert
advanced/shadow_mapping/: main.cpp
advanced/shooting_game/: main.cpp
advanced/shooting_game/shaders/: render.vert
advanced/wave_equation/: main.cpp
cmake/: FindGLEW.cmake  FindGLFW3.cmake  FindGLM.cmake  Macros.cmake
coordinate_transform/: index.html
depth_testing/: index.html
docs/: Makefile  make.bat
docs/source/: conf.py  index.rst
hello_shader/: index.html
hello_triangle/: index.html
jekyll/: .gitignore  404.html  Gemfile  _config.yml  index.markdown
jekyll/_includes/: analytics.html  disqus.html  github_link.html  head.html  header.html  lightbox.html  mathjax.html  sidebar.html  speakerdeck.html
jekyll/_layouts/: default.html  home.html  page.html  post.html
jekyll/_plugins/: link.rb
jekyll/_posts/: 2020-04-04-welcome-to-jekyll.markdown
jekyll/pages/: coordinate_transform.md  depth_testing.md  glad.md  glew.md  glfw.md  glm.md  hello_shader.md  hello_triangle.md  makefile.md  open_window.md  setup.md  window_resize.md
open_window/: index.html  index.rst
public/css/: main.css  main.css.map
setup/: index.html
setup/glad/: index.html
setup/glew/: index.html
setup/glfw/: index.html
setup/glm/: index.html
setup/makefile/: index.html
src/: CMakeLists.txt
src/000_environment_setup/: 000_environment_setup.cpp  README.md
src/001_open_window/: 001_open_window.cpp  main.cpp
src/002_hello_triangle/: 002_hello_triangle.cpp  main.cpp
src/003_coordinate_transformation/: main.cpp
src/003_use_of_methods/: 003_use_of_methods.cpp  main.cpp
src/004_coordinate_transformation/: 004_coordinate_transformation.cpp  main.cpp
src/005_depth_testing/: 005_depth_testing.cpp  main.cpp
src/005_window_resizing/: main.cpp
src/006_animation/: 006_animation.cpp  main.cpp
src/006_use_of_vertex_attribute/: 006_use_of_vertex_attribute.cpp
src/006_window_resizing/: main.cpp
src/007_animation/: main.cpp
src/007_texture_mapping/: main.cpp
src/007_window_resizing/: 007_window_resizing.cpp  main.cpp
src/008_alpha_blending/: main.cpp
src/008_hello_shader/: 008_hello_shader.cpp  glsl.frag
src/008_texture_mapping/: main.cpp
src/009_alpha_blending/: main.cpp
src/009_vertex_buffer/: main.cpp
src/010_hello_shader/shaders/: render.vert
src/010_vertex_attribute/: main.cpp
src/010_vertex_buffer/: main.cpp
src/011_model_loading/: main.cpp
src/011_vertex_array_object/: main.cpp
src/012_hello_shader/: main.cpp
src/012_shading_models/shaders/: render.frag  render.vert
src/013_model_loading/: main.cpp
src/014_shading_models/: main.cpp
src/015_npr_shading/: main.cpp
src/015_npr_shading/shaders/: render.frag  render.vert
src/016_arcball_control/shaders/: render.vert
src/018_arcball_control/: main.cpp
src/020_shooting_game/: main.cpp
src/020_shooting_game/shaders/: texture.vert
src/2d_transformation/: 2d_transformation.py  main.cpp
src/3d_transformation/: 3d_transformation.py  main.cpp
src/999_element_based_drawing/: 005_element_based_drawing.cpp
src/999_hello_shader/: 008_hello_shader.cpp  glsl.vert
src/999_shooting_game/: main.cpp
src/999_shooting_game/shaders/: texture.frag
src/999_vertex_array_object/: 007_vertex_array_object.cpp
src/999_wave_equation/: glsl.frag  glsl.vert  main.cpp  wave_equation.h
src/alpha_blending/: main.cpp
src/animation/: animation.py  main.cpp
src/arcball_control/: arcball_control.py  main.cpp
src/arcball_control/shaders/: render.frag
src/bump_mapping/: main.cpp
src/cartoon_shading/: cartoon_shading.py  main.cpp
src/cartoon_shading/shaders/: render.frag
src/coordinate_transformation/: coordinate_transformation.py  main.cpp
src/cube_mapping/shaders/: background.vert  render.frag
src/depth_testing/: depth_testing.py  main.cpp
src/ex001_bump_mapping/: main.cpp
src/ex002_cube_mapping/: main.cpp
src/ex002_cube_mapping/shaders/: render.vert
src/framebuffer/: main.cpp
src/framebuffer/shaders/: render.vert
src/hello_shader/: Makefile  hello_shader.py  main.cpp
src/hello_shader/shaders/: render.frag  render.vert
src/hello_triangle/: hello_triangle.py  main.cpp
src/keyboard_and_mouse/: keyboard_and_mouse.py  main.cpp
src/keyboard_and_mouse/shaders/: render.frag  render.vert
src/model_loading/: main.cpp  model_loading.py
src/model_loading/shaders/: render.frag  render.vert
src/npr_shading/: main.cpp
src/object_selection/: main.cpp  object_selection.py
src/object_selection/shaders/: render.frag
src/open_window/: Makefile  main.cpp  open_window.py
src/shading_models/: main.cpp  shading_models.py
src/shading_models/shaders/: render.frag  render.vert
src/shadow_mapping/: main.cpp
src/shadow_mapping/shaders/: render.vert  shadowmap.frag  shadowmap.vert
src/shooting_game/: main.cpp
src/shooting_game/shaders/: render.frag
src/texture_mapping/: common.h.in  main.cpp  texture_mapping.py
src/vertex_array_object/: main.cpp
src/vertex_buffer/: main.cpp  vertex_buffer.py
src/wave_equation/: main.cpp
src/window_resizing/: main.cpp  window_resizing.py
support/glad/: gl.h
tests/: test_run.py
window_resize/: index.html
(+74 files in other folders)
